--- a/css/articles.css
+++ b/css/articles.css
@@ -2,7 +2,7 @@
     font-family: megrim;
     src: url(font/megrim.ttf);
   }
-  #leftnav{
+#leftnav{
     float: left;
   }
   #rightnav{
@@ -27,19 +27,19 @@
     margin-right: -50%;
     transform: translate(-50%, -50%);
   }
-  a{
+  #header a{
     font-family: megrim;
     text-decoration: none;
     color: black;
   }
-  ul > li:first-child{
+#header ul > li:first-child{
     margin-left: 15%;
   }
-  ul > li:nth-child(2){
+#header ul > li:nth-child(2){
     float: right;
     margin-right: 18%;
   }
-  li{
+ #header li{
   display: inline-block;
   font-size: 1.5vw;
   }
@@ -59,45 +59,112 @@
   background-size: 56.57px 56.57px;
   }
 
-
-
-
 #leftsnippet{
-    float: left;
-    margin-top: 10vh;
-    margin-left: 10vw;
-    height: 60vh;
-    background: rgba(180, 210, 235, 0.513);
+  float: left;
+  margin-top: 10vh;
+  margin-left: 10vw;
+  height: 60vh;
+  background: rgba(180, 210, 235, 0.513);
 }
 
 #middle {
-    width: 20vw;
-    position: absolute;
-    top: 40%;
-    left: 50%;
-    margin-left: -10vw;
-    margin-top: -10vw;
-    background: rgba(180, 210, 235, 0.513);
-    height: 60vh;
+  width: 20vw;
+  position: absolute;
+  top: 40%;
+  left: 50%;
+  margin-left: -10vw;
+  margin-top: -10vw;
+  background: rgba(180, 210, 235, 0.513);
+  height: 60vh;
+}
+#articlelist li{
+    list-style-type: circle;
+    font-size: 120%;
+    margin-bottom: 5%;
+    font-family: monospace;
+    padding-top: 3%;
 }
 #rightsnippet{
-    float: right;
-    margin-top: 10vh;
-    margin-right: 10vw;
-    height: 60vh;
-    background: rgba(180, 210, 235, 0.513);
+  float: right;
+  margin-top: 10vh;
+  margin-right: 10vw;
+  height: 60vh;
+  background: rgba(180, 210, 235, 0.513);
+}
+
+article{
+  height: 40%;
 }
 p{
-    font-family: monospace;
-    width: 20vw;
-    background: rgba(255, 255, 255, 0.294);
-    font-size: 120%;
+  font-family: monospace;
+  width: 20vw;
+  background: rgba(255, 255, 255, 0.294);
+  font-size: 120%;
 }
 img{
-    height: 45%;
-    width: 20vw;
+  height: 45%;
+  width: 20vw;
 }
 h2{
-    font-family: Arial, Helvetica, sans-serif;
+  font-family: megrim;
 }
-  
+
+button{
+  background-color: inherit;
+}
+
+.modal {
+  display: none; 
+  position: fixed; 
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%; 
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0,0,0);
+  background-color: rgba(0, 0, 0, 0.733); 
+}
+h3{
+  text-align: center;
+  font-family: megrim;
+  font-size: 200%; 
+}
+.milk-content {
+  background-color: #fefefe;
+  margin: 5% auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 50%;
+  height: 80%;
+  box-shadow: #888;
+}
+#lcolumn{
+  width: 40%;
+  margin-left: 5%;
+  padding-right: 50px;
+  border-right: 1px solid black;
+}
+#rcolumn{
+  width: 40%;
+  margin-right: 5%;
+  float: right;
+  margin-top: -75%;
+}
+footer{
+  color: antiquewhite;
+  font-family: monospace;
+}
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 40px;
+  font-family: monospace;
+  font-weight: bold;
+}
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
