--- a/css/articles.css
+++ b/css/articles.css
@@ -45,7 +45,7 @@ font-size: 1.5vw;
 }
 
 body{
-  background-color:rgba(107, 72, 98, 0.335);
+  background-color:rgba(180, 153, 173, 0.335);
 }
 #background{
   background: repeating-linear-gradient(
@@ -100,9 +100,12 @@ article{
 p{
   font-family: monospace;
   width: 20vw;
-  background: rgba(157, 145, 157, 0.445);
+  background: rgba(180, 153, 173, 0.335);
   font-size: 120%;
   text-align: center;  
+}
+.pmodal{
+  background-color: inherit;
 }
 img{
   height: 45%;
@@ -157,23 +160,21 @@ button{
 .milk-content {
   background-color: #f9fdf6;
   margin: 5% auto;
-  padding: 3vw;
+  padding: 1% 3% 0% 1%;
   border: 1px solid #888;
-  width: 65vw;
-  box-shadow: #888;
+  width: 60vw;
 }
 .prison-content {
   background-color: #fbd3c7;
   margin: 5% auto;
-  padding: 3vw;
+  padding: 1% 3% 0% 1%;
   border: 1px solid #888;
-  width: 65vw;
-  box-shadow: #888;
+  width: 60vw;
 }
 h4{
   text-align: center;
   font-family: megrim;
-  margin-top: 3%;
+  margin-top: 4%;
   font-size: 200%;
   width: 100%; 
 }
@@ -182,14 +183,13 @@ h4{
 }
 .lcolumn{
   width: 45%;
-  padding-left: 3%;
-  padding-right: 5%;
+  padding: 3% 5% 3% 3%;
   border-right: 1px solid black;
 }
 .rcolumn{
   width: 45%;
-  margin-left: 5%;
-  float: right;
+  padding: 3% 3% 3% 3%;
+  border-left: 1px solid black;
 }
 #milkfooter{
   color: antiquewhite;
@@ -220,4 +220,77 @@ h4{
   color: black;
   text-decoration: none;
   cursor: pointer;
+}
+
+
+
+/*media screen*/
+.mp{
+  display: none;
+}
+
+@media only screen and (max-width: 600px) {
+  nav{
+    display: none;
+  }
+  h1{
+    font-size: 1.5em;
+  }
+  #middle,
+  #leftsnippet,
+  #rightsnippet{
+    display: none;
+  }
+  #mdiv,
+  #pdiv{
+    display: inline;
+    background-color: aqua;
+  }
+  .mp{
+    display: block;
+  }
+  h4{
+    font-size: 120%;
+    text-align: left;
+    width: 50%;
+    display: block;
+    margin: 10% 0% 5% 25%;
+    text-align: center;
+  }
+  h6{
+    border-top: 1px solid black;
+    font-family: megrim;
+    font-size: 2em;
+    margin: 20px 3% 3% 3%;
+    text-align: center;
+  }
+  .msub{
+    background-color: transparent;
+    margin-bottom: 8%;
+  }
+  .date{
+    font-family: megrim;
+    background-color: transparent;
+    margin: 0%;
+    padding-left: 0%;
+    width: 80%;
+    margin-left: 10%;
+    padding-bottom: 5%;
+    border-bottom: 1px solid rgb(56, 29, 52);
+  }
+  nav{
+    display: none;
+  }
+  p{
+    width: 90%;
+    padding-left: 5%;
+    margin: 0 0 4% 0;
+    background-color: transparent;
+  }
+  #background{
+  background-color: rgba(255, 255, 255, 0.15);
+  background-image: none;
+  margin-top: 20px;
+  height: 240%;
+  }
 }
