--- a/css/contact.css
+++ b/css/contact.css
@@ -44,18 +44,15 @@
   font-size: 1.5vw;
   }
   body{
-    background-color:rgba(198, 100, 255, 0.15);
+    background-color:rgb(233, 233, 233);
   }
   #background{
-    background: repeating-linear-gradient(
-    45deg,
-    rgba(180, 117, 165, 0.383),
-    rgba(180, 117, 165, 0.383) 5px,
-    rgba(84, 55, 77, 0) 5px,
-    rgba(84, 55, 77, 0) 20px);
+    background-color: rgb(110, 107, 112);
     margin-top: 4.5vh; 
     height: 92vh;
     z-index: -1;
   background-size: 56.57px 56.57px;
   }
+
+  <form
   
