--- a/css/articles.css
+++ b/css/articles.css
@@ -46,29 +46,37 @@ font-size: 1.5vw;
 
 body{
   background-image: url(img/articleback.jpg);
-  background-color: lightgray;
-  position: relative;
-  background-position: 10px 100px; 
-  background-size: 30%;
-  background-repeat: space;
+  background-color: #EDEDEF;
+  background-size: contain;
+  background-repeat: no-repeat;
 }
 /*NAV BAR + BACKGROUND*/
+
+#rightsnippet,
 #leftsnippet{
-  float: left;
-  margin-top: 10vh;
-  margin-left: 10vw;
-  height: 67%;
-  background: rgba(205, 194, 202, 0.966);
+  width: 20%;
+  height: 595px;
+  float: right;
+  margin: 7% 4% 0% 0%;
+  background-color: rgba(25, 29, 34, 0.842);
+  box-shadow: 10px 10px 8px #888888;
+}
+#leftsnippet{
+  height: 615px;
 }
 #middle {
-  float: left;
-  margin-top: 15vh;
-  margin-left: 10vw;
-  width: 20vw;
-  height: 40vh;
-  background: rgba(205, 194, 202, 0.938);
-  border-left: 3px solid rgb(223, 48, 48);
+  float: right;
+  width: 15%;
+  margin: 12% 4% 0% 0%;
+  padding-bottom: 3%;
+  background: rgba(25, 29, 34, 0.842);
   box-shadow: 10px 10px 8px #888888;
+}
+#leftsnippet p,
+#rightsnippet p,
+#middle p{
+  color: lightgray;
+  width: 90%
 }
 #articlelist li{
   font-size: 120%;
@@ -78,15 +86,6 @@ body{
 }
 #listcontainer{
   text-align: center
-}
-
-#rightsnippet{
-  float: right;
-  margin-top: 10vh;
-  margin-right: 10vw;
-  height: 65%;
-  background: rgba(205, 194, 202, 0.938);
-  
 }
 article{
   height: 40%;
@@ -101,13 +100,14 @@ p{
   background-color: inherit;
 }
 img{
-  height: 45%;
-  width: 20vw;
+  width: 100%;
+  height: auto;
 }
 .snippetimg{
   max-width: 100%;
 }
 h2{
+  color: lightgray;
   font-family: megrim;
   font-size: 1.5em;
   margin: 2% 0 0 0;
@@ -119,6 +119,7 @@ h5{
   margin: 5% 0% 2.5% 3%;
 }
 h3{
+  color: lightgray;
   font-family: megrim;
   text-align: center;
   font-size: 2em;
@@ -135,7 +136,7 @@ button{
   margin-top: 5%;
   width: 100%;
   text-decoration: underline;
-  color: blue;
+  color: rgb(55, 55, 206);
 }
 
 .modal {
@@ -152,14 +153,14 @@ button{
 }
 
 .milk-content {
-  background-color: #f9fdf6;
+  background-color: #A4B8C7;
   margin: 5% auto;
   padding: 1% 3% 0% 1%;
   border: 1px solid #888;
   width: 60vw;
 }
 .prison-content {
-  background-color: #fbd3c7;
+  background-color: #A4B8C7;
   margin: 5% auto;
   padding: 1% 3% 0% 1%;
   border: 1px solid #888;
