--- a/css/lending.css
+++ b/css/lending.css
@@ -12,9 +12,6 @@
   display: inline-block;
   width: 18vw;
 }
-#navbar{
-  background: white;
-}
 nav{
   width: 40vw;
 }
@@ -44,43 +41,35 @@ display: inline-block;
 font-size: 1.5vw;
 }
 body{
-  background-image: url(img/lback.png);
-  width: 100%;
-  position: relative;
-  background-size: cover;
+  background-image: url(img/lback.jpg);
+  background-size: 30%;
+  background-repeat: no-repeat;
+  background-position: 0% 120%;
+  background-color: #263200;
 }
 /*NAV BAR + BACKGROUND*/
-
-img{
-  width:100%;
-}
-#position {
-  width: 20vw;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  margin-left: -10vw;
-  margin-top: -10vw;
+#rightsnippet,
+#leftsnippet{
+  width: 20%;
+  height: 595px;
+  float: right;
+  padding-bottom: 1%;
+  margin: 5% 4% 0% 0%;
+  border: 2px solid rgba(25, 29, 34, 0.842);
+  box-shadow: 10px 10px 8px #888888;
+  border-radius: 5px;
 }
 #leftsnippet{
-  float: left;
-  margin-top: 10vh;
-  margin-left: 10vw;
-  border-radius: 10px;
-  background: whitesmoke;
-  border-left: 3px solid rgb(156, 82, 12);
-  box-shadow: 10px 10px 8px #888888;
+  height: 620px;
 }
-#middle {
-  float: left;
-  margin-top: 15vh;
-  margin-left: 10vw;
-  width: 20vw;
-  height: 40vh;
-  border-radius: 10px;
-  background: whitesmoke;
-  border-left: 3px solid rgb(156, 82, 12);
+#middle{
+  float: right;
+  width: 15%;
+  margin: 10% 4% 0% 0%;
+  padding-bottom: 3%;
+  background: rgba(25, 29, 34, 0.842);
   box-shadow: 10px 10px 8px #888888;
+  border-radius: 5px;
 }
 #articlelist li{
   font-size: 120%;
@@ -92,15 +81,6 @@ img{
   text-align: center
 }
 
-#rightsnippet{
-  float: right;
-  margin-top: 10vh;
-  margin-right: 10vw;
-  border-radius: 10px;
-  background: whitesmoke;
-  border-left: 3px solid rgb(156, 82, 12);
-  box-shadow: 10px 10px 8px #888888;
-}
 article{
   height: 40%;
 }
